Hyperlinks added and now functioning

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
         {% for order in orders %}  
         <div>
         <p>
-            {{ order.name }}: <b>{{ order.album }}</b>
+            <a href="/orders/{{ order.id }}">{{ order.name }}: <b>{{ order.album }}</b></a>
         </p>
         </div>
         {% endfor %}
